implement comment reply

--- a/translations/labels.en.yaml
+++ b/translations/labels.en.yaml
@@ -2,6 +2,7 @@ L_UPDATE: Update
 L_BACK: Back
 L_EDIT: Edit
 L_SEND: Send
+L_REPLY: Reply
 
 L_CREATE_NEW_ARTICLE: Create new article
 L_SEARCH_ARTICLES: Search articles
